# catacombs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
migrations/: 001_users.sql
src/: auth.rs  config.rs  encryption.rs  error.rs  lib.rs
src/models/: mod.rs  subscription.rs  user.rs
src/routes/: auth.rs  mod.rs
src/storage/: memory.rs  mod.rs  sqlx_impl.rs
