[package]
name = "catacombs"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Catacombs is a simple Discord oauth2 library with user management and subscription support, uses Axum, SQLx, Tokio, Rustls by default."
repository = "https://github.com/cycle-five/catacombs"
keywords = ["discord", "oauth", "authentication", "axum"]
categories = ["authentication", "web-programming", "api"]

[features]
default = ["sqlx-storage", "rustls-tls"]
sqlx-storage = ["dep:sqlx"]
memory-storage = []
# TLS backends (choose one)
rustls-tls = ["reqwest/rustls-tls", "sqlx?/tls-rustls"]
native-tls = ["reqwest/native-tls", "sqlx?/tls-native-tls"]

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Database (optional, enabled by sqlx-storage feature)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
], optional = true }

# UUID generation
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client (for Discord API)
# TLS backend controlled via rustls-tls/native-tls features
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "macos-system-configuration"] }

# OAuth2
oauth2 = "5.0"

# JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Concurrent data structures
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.9"

# Encryption
generic-array = { version = "1.3", features = ["compat-0_14"] }
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]

opt-level = 3
lto = true
codegen-units = 1
